src/core/jit/synth/snapshots/tailcall__core__jit__synth__synth_const__tests__multiple_nested_skipped.snap
---
source: src/core/jit/synth/synth_const.rs
expression: val
---
{
  "posts": [
    {
      "id": 1,
      "title": "Some Title"
    },
    {
      "id": 2,
      "title": "Not Some Title"
    }
  ],
  "users": [
    {
      "id": 1
    },
    {
      "id": 2
    }
  ]
}
