src/core/jit/synth/snapshots/tailcall__core__jit__synth__synth_const__tests__posts.snap
---
source: src/core/jit/synth/synth_const.rs
expression: val
---
{
  "posts": [
    {
      "id": 1
    },
    {
      "id": 2
    }
  ]
}
