src/core/jit/synth/snapshots/tailcall__core__jit__synth__synth_const__tests__user.snap
---
source: src/core/jit/synth/synth_const.rs
expression: val
---
{
  "data": {
    "user": {
      "id": 1
    }
  }
}
